<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/possible_result"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@{item.order}"
                app:layout_constraintStart_toEndOf="@id/result_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_pro_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/probability"
                app:layout_constraintStart_toEndOf="@id/result_order"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.probability}"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/margin_min"
                android:layout_marginStart="@dimen/margin_min"
                app:layout_constraintStart_toEndOf="@id/result_pro_title"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
            android:id="@+id/possible_picture"
            android:layout_width="@dimen/edit_height"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:background="@drawable/imageview_bg"
            android:padding="5dp"
            app:img="@{NetWorkUtil.BaseUrl+item.picture}"
            android:layout_marginTop="@dimen/margin_min"
            app:layout_constraintTop_toBottomOf="@id/result_title_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="害虫图像" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/possible_picture">

            <TextView
                android:id="@+id/result_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/pest_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@{item.pestName}"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/result_name_title"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_latin_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_name_layout">

            <TextView
                android:id="@+id/result_latin_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:text="@string/latin_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_latin_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:text="@{item.latinName}"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/result_latin_name_title"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_plant_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_latin_name_layout">

            <TextView
                android:id="@+id/result_plant_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/plant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_min"
                android:singleLine="false"
                android:text="@{item.plant}"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_plant_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_area_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_plant_layout">

            <TextView
                android:id="@+id/result_area_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="@dimen/margin_min"
                android:text="@string/area"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_min"
                android:singleLine="false"
                android:text="@{item.area}"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_area_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <import type="com.example.pestidentificationapp.network.NetWorkUtil"/>

        <variable
            name="item"
            type="com.example.pestidentificationapp.model.IdentificationResultShow" />
    </data>
</layout>
